--- a/front/src/app/components/commons/curso/curso.component.css
+++ b/front/src/app/components/commons/curso/curso.component.css
@@ -9,3 +9,60 @@
     font-size: 1.125rem;
     text-anchor: middle;
   }
+
+  .button {
+    font: inherit;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+  
+  .button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.15s ease;
+  }
+  
+  .button--primary {
+    background-color: #007dab;
+    color: #FFF;
+    padding: 0.75rem 1.25rem;
+    border-radius: 0.25rem;
+    font-weight: 500;
+    font-size: 0.875rem;
+  }
+  
+  .button--primary:hover {
+    background-color: #006489;
+  }
+
+  .button-secondary {
+    background-color: #4c565a;
+    color: #FFF;
+    padding: 0.75rem 1.25rem;
+    border-radius: 0.25rem;
+    font-weight: 500;
+    font-size: 0.875rem;
+  }
+
+  .button-secondary:hover {
+    background-color: #2d2f30;
+  }
+
+  .button--danger {
+    background-color: #bb350d;
+    color: #FFF;
+    padding: 0.75rem 1.25rem;
+    border-radius: 0.25rem;
+    font-weight: 500;
+    font-size: 0.875rem;
+  }
+  
+  .button--danger:hover {
+    background-color: #70210d;
+  }
+  
+  a{
+    text-decoration: none;
+  }
