--- a/front/src/app/components/commons/curso/curso.component.html
+++ b/front/src/app/components/commons/curso/curso.component.html
@@ -10,9 +10,9 @@
         <div class="card-body">
           <h1 class="card-title">{{course.courseName}}</h1>
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-primary" type="button" *ngIf="isTeacherOrAdmin"
+            <button class="button button--primary" type="button" *ngIf="isTeacherOrAdmin"
               [routerLink]="['/cursos/modifcourse', course.id]">Modificar</button>
-            <a class="btn btn-danger" type="a" *ngIf="isAdmin" (click)="delete(course.id)">Eliminar</a>
+            <a class="button button--danger" type="a" *ngIf="isAdmin" (click)="delete(course.id)">Eliminar</a>
           </div>
           <hr>
           <h4 class="card-text">Descripción del curso</h4>
@@ -27,15 +27,15 @@
         </div>
         <div class="card-footer">
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-secondary me-md-2" type="button" [routerLink]="['/cursos']">Volver</button>
+            <button class="button button-secondary me-md-2" type="button" [routerLink]="['/cursos']">Volver</button>
 
-            <button *ngIf="!isAdmin" class="btn btn-primary" type="button" (click)="registerInCourse()"
+            <button *ngIf="!isAdmin" class="button button--primary " type="button" (click)="registerInCourse()"
               [disabled]="!(isAuth() | async )">Inscribirse</button>
           </div>
           <hr>
           <div class="d-grid gap-2">
             <small *ngIf="!(isAuth() | async)" class="alert alert-danger alert-dismissible fade show" role="alert">
-              Registrate para anotarte <a class="btn btn-primary" routerLink="/login">AQUÍ</a>
+              Registrate para anotarte <a class="button button--primary " routerLink="/login">AQUÍ</a>
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Cerrar"></button>
             </small>
           </div>
