--- a/front/src/app/components/forms/login-form/login-form.component.html
+++ b/front/src/app/components/forms/login-form/login-form.component.html
@@ -7,7 +7,7 @@
                 <div class="col bg_sections bg d-none d-lg-block col-md-6 col-lg-6 col-xl-7 ">
                 </div>
                 <div class="col-md-6 offset-md-3">
-                    <div class="card text-center container-fluid bg-white shadow px-0">
+                    <div class="card text-center container-fluid bg-white shadow px-0 pt-4 ">
                         <!-- IMAGEN FONDO -->
                         <div class="text-center">
                             <!-- LOGOTIPO -->
@@ -16,15 +16,15 @@
                         </div>
                         <div class="card-body">
                             <div class="card-header">
-                                <h2 class="card-title" id="titleForm">Iniciar sesión en la Incubadora del NOC
+                                <h2 class="card-title mt-2" id="titleForm">Iniciar sesión en la Incubadora del NOC
                                 </h2>
                             </div>
                             <br>
                             <!-- LOGIN -->
                             <form #form="ngForm">
-                                <div class="mb-4">
-                                    <label for="correo" class="form-label">Email</label>
-                                    <input type="email" class="form-control" name="email" [(ngModel)]="model.email"
+                                <div class="">
+                                    <p class="input__label text-start "> Email</p>
+                                    <input type="email" class="form-control input__field" name="email" [(ngModel)]="model.email"
                                         placeholder="example@email.com" #email="ngModel" required>
                                     <div *ngIf="email.dirty || email.touched || email.invalid" class="alert">
                                         <small *ngIf="email.errors?.['required'] && email.touched"
@@ -37,9 +37,9 @@
                                         </small>
                                     </div>
                                 </div>
-                                <div class="mb-4">
-                                    <label for="pass" class="form-label"> Password</label>
-                                    <input type="password" name="password" class="form-control"
+                                <div class="mb-3">
+                                    <p class="input__label text-start "> Password</p>
+                                    <input type="password" name="password" class="form-control input__field"
                                         [(ngModel)]="model.password" placeholder="123456" minlength="6"
                                         #password="ngModel" required>
                                     <div *ngIf="password.dirty || password.touched" class="alert">
@@ -53,8 +53,8 @@
                                         </small>
                                     </div>
                                 </div>
-                                <div class="d-grid">
-                                    <button type="button" name="submit" class="btn btn-primary" (click)="logIn(form)"
+                                <div class="d-grid mt-4">
+                                    <button type="button" name="submit" class="button button--primary" (click)="logIn(form)"
                                         [disabled]="form.invalid">Iniciar
                                         sesion</button>
                                 </div>
