--- a/front/src/app/components/forms/register-form/register-form.component.css
+++ b/front/src/app/components/forms/register-form/register-form.component.css
@@ -11,3 +11,78 @@
   background-position: left center;
   background-size: cover;
 }
+
+.button {
+  font: inherit;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.15s ease;
+}
+
+.button--primary {
+  background-color: #007dab;
+  color: #FFF;
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.25rem;
+  font-weight: 500;
+  font-size: 0.875rem;
+}
+
+.button--primary:hover {
+  background-color: #006489;
+}
+
+.input__label {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.input__field {
+  display: block;
+  border: 1px solid #DDD;
+  border-radius: 0.25rem;
+  transition: 0.15s ease;
+}
+
+
+.input__field:focus {
+  outline: none;
+  border-color: #007dab;
+  box-shadow: 0 0 0 1px #007dab, 0 0 0 4px rgba(0, 125, 171, 0.25);
+}
+
+.input__field_double{
+  border: 1px solid #DDD;
+  border-radius: 0.25rem;
+  transition: 0.15s ease;
+  width: 100%;
+}
+
+.input__field_double:focus {
+  outline: none;
+  border-color: #007dab;
+  box-shadow: 0 0 0 1px #007dab, 0 0 0 4px rgba(0, 125, 171, 0.25);
+}
+
+.input_div{
+  width: 100%;
+}
+
+
+.div-input-container{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+
