--- a/front/src/app/modules/pages/publicaciones/publicaciones.component.css
+++ b/front/src/app/modules/pages/publicaciones/publicaciones.component.css
@@ -105,7 +105,7 @@
   }
   
   .card-int__button::before {
-    content: 'More for this article';
+    content: 'Leer este artículo';
     color: white;
     display: flex;
     align-items: center;
