--- a/front/src/app/modules/pages/publicaciones/publicaciones.component.html
+++ b/front/src/app/modules/pages/publicaciones/publicaciones.component.html
@@ -39,23 +39,26 @@
                         </div> -->
                         <div class="card">
                             <div class=" d-flex flex-row">
-                              <!-- <div class="col-5 col-sm-4">
+                                <!-- <div class="col-5 col-sm-4">
                                 <img src="assets/images/bs-images/img-3x4.png" class="img-fluid w-100" alt="card-horizontal-image">
                               </div> -->
-                              <div class="card__img">
-                                <span class="card__span">Novedad</span>
-                            </div>
-                              <div class="col-7 col-sm-8 d-flex align-items-center">
-                                <div class="card-body" >
-                                  <h5 class="card-title fs-5">{{publication.title}}</h5>
-                                  <p class="card-text">{{publication.description}}</p>
-                                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                  <button class="card-int__button" [routerLink]="['/publicaciones/details', publication.id]"><a class="btn">Leer
-                                    más</a></button>                                
+                                <div class="card__img">
+                                    <span class="card__span">Novedad</span>
                                 </div>
-                              </div>
+                                <div class="col-7 col-sm-8 d-flex align-items-center">
+                                    <div class="card-body">
+                                        <h5 class="card-title fs-5">{{publication.title}}</h5>
+                                        <p class="card-text">{{publication.description}}</p>
+                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
+                                        </p>
+                                        <button class="card-int__button"
+                                            [routerLink]="['/publicaciones/details', publication.id]">
+                                            <a class="btn">Ver</a>
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
-                          </div>
+                        </div>
                     </div>
                 </div>
             </div>
