--- a/front/src/app/modules/pages/home/home.component.css
+++ b/front/src/app/modules/pages/home/home.component.css
@@ -11,3 +11,42 @@
   background-position: left center;
   background-size: cover;
 }
+
+.img-container {
+  padding: 80px 50px 60px 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+.bg-grey {
+  background-color: #f6f6f6;
+}
+.logo {
+  font-size: 200px;
+}
+
+.img{
+  width: 50%;
+  border-radius: 15px;
+}
+
+.img-r{
+  border-radius: 50%;
+}
+
+.text-container{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+h2{
+font-size: 1.8rem;
+}
+
+p{
+font-size: 1.1rem;
+line-height: 1.7rem;
+}
